[project]
name = "prompteasy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.15"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "ruff>=0.11.12",
    "typer>=0.16.0",
    "uvicorn>=0.34.2",
    "requests>=2.0.0",
    "pyyaml>=6.0",
    "dotenv>=0.9.9",
]
